# CSC430Project

./: .gitignore  Bot.cpp  Bot.h  BotWindow.cpp  BotWindow.h  CMakeLists.txt  CMakePresets.json  CSC430Project.cpp  CSC430Project.sln  CSC430ProjectThrowaway.txt  Cancel.cpp  Cancel.h  Command.h  DatabaseAPI.cpp  DatabaseAPI.h  DatabaseManager.cpp  DatabaseManager.h  FindFile.cpp  FindFile.h  Help.cpp  Help.h  MessageHolder.cpp  MessageHolder.h  READ ME FIRST!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.txt  README.md  SignupWindow.cpp  SignupWindow.h  StartWindow.cpp  StartWindow.h  USER.h  UserManager.cpp  UserManager.h  UserStates.h  setup.bat
CSC430Project/: Bot.cpp  Bot.h  CSC430Project.cpp  CSC430Project.vcxproj  CSC430Project.vcxproj.filters  DatabaseManager.h  MessageHolder.cpp  MessageHolder.h  USER.h  UserManager.cpp  UserManager.h
CSC430Project/x64/Debug/: CSC430Project.exe.recipe  bot.obj.enc  vc143.idb
CSC430Project/x64/Debug/CSC430Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSC430Project.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
New SignUp and Login/: UserManager.h  UserManger.cpp  main.cpp
